# Albikar

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  CMakePresets.json  LICENSE  README.md  vcpkg.json
.github/workflows/: ci.yml
cmake/: AddGitSubmodule.cmake  CompilerWarnings.cmake
cmake/toolchains/: clang-cl-windows.cmake
docs/: engineering-principles.md  product-directions.md  roadmap.md
editor/include/albikar/editor/: EditorApplication.hpp  EditorPanels.hpp  IGuiPanel.hpp
editor/src/: main.cpp
editor/src/gui/: EditorApplication.cpp  EditorPanels.cpp
engine/include/albikar/: Engine.hpp  Export.hpp
engine/src/: Engine.cpp
src/: CMakeLists.txt  main.cpp  resource.qrc
src/core/: Application.cpp  Application.h  CMakeLists.txt  Version.cc.in  Version.cpp.in  Version.h
src/gui/: CMakeLists.txt  QUIApplication.cpp  QUIApplication.h
src/logger/: CMakeLists.txt  ConsoleLogger.cpp  ConsoleLogger.h  ILogger.h  Logger.cpp  Logger.h
src/profiler/: CMakeLists.txt  Instrumentor.cpp  Instrumentor.h  Profiler.h
src/qml/: main.qml
src/utils/: CMakeLists.txt  Time.cpp  Time.h
test/: CMakeLists.txt
tests/engine/: EngineTests.cpp
